# Vibe_Agentic_coding_robot_dreams_course_tasks

./: .gitignore  README.md  gnano.sh
.github/workflows/: ci.yml
chat_history/: gnano_session_c4d878f7.jsonl
claude/: claude-code-cli-reference.md
claude/git-aware-nano/: CMakeLists.txt  DEVELOPMENT.md  Makefile  PROMPT.md  README.md
claude/git-aware-nano/src/: database.cpp  fuzzy.h  grep.cpp  highlighters.h  main.cpp  markdown_preview.cpp  markdown_preview.h  terminal.cpp  terminal.h
claude/git-aware-nano/src/git/: git_blame.h  git_diff.h  git_log.cpp  git_process.h  git_repo.h  git_status.h
claude/git-aware-nano/src/tests/: test_git.cpp
claude/nano-clone/: CMakeLists.txt  push.sh
claude/nano-clone/src/: database.cpp  editor.h
git-aware-nano/: Makefile  README.md  run.sh
git-aware-nano/src/: buffer.cpp  buffer.h  database.h  editor.cpp  editor.h  filepanel.cpp  fuzzy.cpp  grep.h  highlight.h  highlighters.cpp  terminal.h
git-aware-nano/src/git/: git_blame.cpp  git_diff.cpp  git_log.h  (+3 more)
hw_01/: main.py  pyproject.toml
hw_02_agentic_coding/: .env.example  .gitignore  README.md  agents.py  main.py  requirements.txt
hw_02_agentic_coding/examples/: vulnerable_app.py
hw_02_agentic_coding_v2/: .gitignore  README.md  agents.py  demo.sh  pipeline.py  pyproject.toml  review.sh
hw_02_agentic_coding_v2/examples/: budget_tracker.py  clean_service.py
maze_game/: game_test_git_prompt.md  maze.py  test_maze.py
nano-clone/: Makefile  README.md
nano-clone/src/: buffer.cpp  buffer.h  database.h  editor.cpp  filepanel.h  highlighters.cpp  terminal.h
(+5 files in other folders)
